// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Stack] navigator should renders [Dark] mode 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#232323",
                "borderBottomColor": "#333333",
                "flex": 1,
                "shadowColor": "#333333",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "#D3D8E8",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Intro
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#232323",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#232323",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "#232323",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "paddingBottom": 24,
                                "paddingLeft": 24,
                                "paddingRight": 24,
                                "paddingTop": 24,
                                "width": "100%",
                              },
                            ]
                          }
                        >
                          <RCTScrollView>
                            <View>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 18,
                                      "lineHeight": 27,
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                              <View
                                style={
                                  Object {
                                    "height": 400,
                                  }
                                }
                              />
                            </View>
                          </RCTScrollView>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "85%",
                              },
                            ]
                          }
                        >
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#8A96DC",
                                    "borderColor": "#8A96DC",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                카카오 로그인
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#8A96DC",
                                    "borderColor": "#8A96DC",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                프로필 조회
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#8A96DC",
                                    "borderColor": "#8A96DC",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                링크 해제
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#8A96DC",
                                    "borderColor": "#8A96DC",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                카카오 로그아웃
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 40,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`[Stack] navigator should renders without crashing 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "zIndex": 1,
        }
      }
    >
      <View
        accessibilityElementsHidden={false}
        importantForAccessibility="auto"
        onLayout={[Function]}
        pointerEvents="box-none"
        style={null}
      >
        <View
          pointerEvents="box-none"
          style={
            Object {
              "bottom": 0,
              "left": 0,
              "opacity": 1,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": 0,
            }
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#FFFFFF",
                "borderBottomColor": "#EDEDED",
                "flex": 1,
                "shadowColor": "#EDEDED",
                "shadowOffset": Object {
                  "height": 0.5,
                  "width": 0,
                },
                "shadowOpacity": 0.85,
                "shadowRadius": 0,
              }
            }
          />
        </View>
        <View
          pointerEvents="box-none"
          style={
            Object {
              "height": 64,
              "maxHeight": undefined,
              "minHeight": undefined,
              "opacity": undefined,
              "transform": undefined,
            }
          }
        >
          <View
            pointerEvents="none"
            style={
              Object {
                "height": 20,
              }
            }
          />
          <View
            pointerEvents="box-none"
            style={
              Object {
                "alignItems": "center",
                "flex": 1,
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <View
              pointerEvents="box-none"
              style={
                Object {
                  "marginHorizontal": 16,
                  "opacity": 1,
                }
              }
            >
              <Text
                accessibilityRole="header"
                aria-level="1"
                numberOfLines={1}
                onLayout={[Function]}
                style={
                  Object {
                    "color": "#000000",
                    "fontSize": 17,
                    "fontWeight": "600",
                  }
                }
              >
                Intro
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
    <View
      onLayout={[Function]}
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        pointerEvents="box-none"
        style={
          Object {
            "bottom": 0,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
          }
        }
      >
        <View
          collapsable={false}
          style={
            Object {
              "opacity": 1,
            }
          }
        />
        <View
          accessibilityElementsHidden={false}
          closing={false}
          gestureVelocityImpact={0.3}
          importantForAccessibility="auto"
          onClose={[Function]}
          onGestureBegin={[Function]}
          onGestureCanceled={[Function]}
          onGestureEnd={[Function]}
          onOpen={[Function]}
          onTransition={[Function]}
          pointerEvents="box-none"
          style={
            Array [
              Object {
                "overflow": undefined,
              },
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
            ]
          }
          transitionSpec={
            Object {
              "close": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
              "open": Object {
                "animation": "spring",
                "config": Object {
                  "damping": 500,
                  "mass": 3,
                  "overshootClamping": true,
                  "restDisplacementThreshold": 10,
                  "restSpeedThreshold": 10,
                  "stiffness": 1000,
                },
              },
            }
          }
        >
          <View
            needsOffscreenAlphaCompositing={false}
            pointerEvents="box-none"
            style={
              Object {
                "flex": 1,
              }
            }
          >
            <View
              collapsable={false}
              forwardedRef={[Function]}
              onGestureHandlerEvent={[Function]}
              onGestureHandlerStateChange={[Function]}
              style={
                Object {
                  "flex": 1,
                  "transform": Array [
                    Object {
                      "translateX": 0,
                    },
                    Object {
                      "translateX": 0,
                    },
                  ],
                }
              }
            >
              <View
                pointerEvents="none"
                style={
                  Object {
                    "backgroundColor": "#FFFFFF",
                    "bottom": 0,
                    "left": 0,
                    "position": "absolute",
                    "shadowColor": "#000",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": -1,
                    },
                    "shadowOpacity": 0.3,
                    "shadowRadius": 5,
                    "top": 0,
                    "width": 3,
                  }
                }
              />
              <View
                style={
                  Array [
                    Object {
                      "flex": 1,
                      "overflow": "hidden",
                    },
                    Array [
                      Object {
                        "backgroundColor": "#FFFFFF",
                      },
                      undefined,
                    ],
                  ]
                }
              >
                <View
                  style={
                    Object {
                      "flex": 1,
                      "flexDirection": "column-reverse",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "flex": 1,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "justifyContent": "center",
                        }
                      }
                    >
                      <View
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "alignSelf": "stretch",
                              "backgroundColor": "#FFFFFF",
                              "flexBasis": 0,
                              "flexDirection": "column",
                              "flexGrow": 1,
                              "flexShrink": 1,
                              "justifyContent": "flex-start",
                              "overflow": "hidden",
                            },
                          ]
                        }
                      >
                        <View
                          style={
                            Array [
                              Object {
                                "alignItems": "center",
                                "flexDirection": "column",
                                "height": "100%",
                                "justifyContent": "flex-start",
                                "paddingBottom": 24,
                                "paddingLeft": 24,
                                "paddingRight": 24,
                                "paddingTop": 24,
                                "width": "100%",
                              },
                            ]
                          }
                        >
                          <RCTScrollView>
                            <View>
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#000000",
                                      "fontSize": 18,
                                      "lineHeight": 27,
                                    },
                                  ]
                                }
                              >
                                
                              </Text>
                              <View
                                style={
                                  Object {
                                    "height": 400,
                                  }
                                }
                              />
                            </View>
                          </RCTScrollView>
                        </View>
                        <View
                          style={
                            Array [
                              Object {
                                "alignSelf": "center",
                                "bottom": 40,
                                "flexDirection": "column",
                                "position": "absolute",
                                "width": "85%",
                              },
                            ]
                          }
                        >
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#393D7A",
                                    "borderColor": "#393D7A",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                카카오 로그인
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#393D7A",
                                    "borderColor": "#393D7A",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                프로필 조회
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#393D7A",
                                    "borderColor": "#393D7A",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                링크 해제
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 12,
                              }
                            }
                          />
                          <View
                            activeOpacity={0.7}
                            onPress={[Function]}
                            testID="btn-login"
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "alignItems": "center",
                                    "alignSelf": "center",
                                    "backgroundColor": "#393D7A",
                                    "borderColor": "#393D7A",
                                    "borderRadius": 4,
                                    "borderWidth": 2,
                                    "height": 52,
                                    "justifyContent": "center",
                                    "width": 320,
                                  },
                                  Object {
                                    "backgroundColor": "#FEE500",
                                    "borderRadius": 40,
                                    "borderWidth": 1,
                                  },
                                ]
                              }
                            >
                              <Image
                                source={
                                  Object {
                                    "canInstrument": true,
                                    "createTransformer": [Function],
                                    "getCacheKey": [Function],
                                    "process": [Function],
                                  }
                                }
                                style={
                                  Array [
                                    Object {
                                      "height": 24,
                                      "left": 16,
                                      "position": "absolute",
                                      "width": 24,
                                    },
                                  ]
                                }
                              />
                              <Text
                                style={
                                  Array [
                                    Object {
                                      "color": "#D3D8E8",
                                      "fontSize": 14,
                                    },
                                    Object {
                                      "color": "black",
                                      "fontSize": 16,
                                    },
                                  ]
                                }
                              >
                                카카오 로그아웃
                              </Text>
                            </View>
                          </View>
                          <View
                            style={
                              Object {
                                "marginTop": 40,
                              }
                            }
                          />
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </RNCSafeAreaProvider>
</View>
`;
